# Foveated-Rendering

./: .gitignore  CMakeLists.txt  Readme.md
depends/cmake/: FindImGui.cmake  FindOptiX.cmake  configure_optix.cmake
depends/gdt/: CMakeLists.txt
depends/gdt/gdt/: gdt.h
depends/gdt/gdt/math/: fixedpoint.h
headers/: GLFWindow.h  LaunchParams.h  Model.h  boundingBox.h  camera.h  cudaBuffer.h  cutil_math.h  dataStructs.h  imageProcessing.h  optixPipeline.h  pathTracer.h  random.h  texture.h  transferFunction.h
shaders/: PerRayData.h  Utility.h  devicePrograms.cu  fragment.glsl  postProcessing.cu  toneMapping.h  vertex.glsl
src/: GLFWindow.cpp  Model.cpp  boundingBox.cpp  camera.cpp  cudaBuffer.cpp  imageProcessing.cpp  launchParams.cpp  main.cpp  optixPipeline.cpp  pathTracer.cpp  texture.cpp  transferFunction.cpp
